--- a/assignments/ass5.ipynb
+++ b/assignments/ass5.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -75,28 +75,11 @@
        "$$E(x) = \\sum_{i=1}^{N} \\left(D(x_{i}) - d_{i}\\right)^{2} = \\left(w_{0} + 1\\right)^{2} + \\left(w_{0} + w_{1} - 1\\right)^{2} + \\left(w_{0} + w_{2} + 1\\right)^{2} + \\left(w_{0} + w_{1} + w_{2} - 1\\right)^{2}$$"
       ],
       "text/plain": [
-       "         N                                                                    \n",
-       "        ___                                                                   \n",
-       "        ╲                                                                     \n",
-       "         ╲                  2           2                2                2   \n",
-       "E(x) =   ╱   (D(x_{i}) - dᵢ)  = (w₀ + 1)  + (w₀ + w₁ - 1)  + (w₀ + w₂ + 1)  + \n",
-       "        ╱                                                                     \n",
-       "        ‾‾‾                                                                   \n",
-       "       i = 1                                                                  \n",
-       "\n",
-       "                   \n",
-       "                   \n",
-       "                   \n",
-       "                  2\n",
-       "(w₀ + w₁ + w₂ - 1) \n",
-       "                   \n",
-       "                   \n",
-       "                   "
+       "         N                                                                    \n        ___                                                                   \n        ╲                                                                     \n         ╲                  2           2                2                2   \nE(x) =   ╱   (D(x_{i}) - dᵢ)  = (w₀ + 1)  + (w₀ + w₁ - 1)  + (w₀ + w₂ + 1)  + \n        ╱                                                                     \n        ‾‾‾                                                                   \n       i = 1                                                                  \n\n                   \n                   \n                   \n                  2\n(w₀ + w₁ + w₂ - 1) \n                   \n                   \n                   "
       ]
      },
-     "execution_count": 51,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -126,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -135,14 +118,11 @@
        "$$\\frac{{\\delta}E}{{\\delta}w_0} = 8 w_{0} + 4 w_{1} + 4 w_{2} = 0$$"
       ],
       "text/plain": [
-       "{\\delta}E                          \n",
-       "────────── = 8⋅w₀ + 4⋅w₁ + 4⋅w₂ = 0\n",
-       "{\\delta}w₀                         "
+       "{\\delta}E                          \n────────── = 8⋅w₀ + 4⋅w₁ + 4⋅w₂ = 0\n{\\delta}w₀                         "
       ]
      },
-     "execution_count": 53,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -152,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -161,14 +141,11 @@
        "$$\\frac{{\\delta}E}{{\\delta}w_1} = 4 w_{0} + 4 w_{1} + 2 w_{2} - 4 = 0$$"
       ],
       "text/plain": [
-       "{\\delta}E                              \n",
-       "────────── = 4⋅w₀ + 4⋅w₁ + 2⋅w₂ - 4 = 0\n",
-       "{\\delta}w₁                             "
+       "{\\delta}E                              \n────────── = 4⋅w₀ + 4⋅w₁ + 2⋅w₂ - 4 = 0\n{\\delta}w₁                             "
       ]
      },
-     "execution_count": 54,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -177,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -186,14 +163,11 @@
        "$$\\frac{{\\delta}E}{{\\delta}w_2} = 4 w_{0} + 2 w_{1} + 4 w_{2} = 0$$"
       ],
       "text/plain": [
-       "{\\delta}E                          \n",
-       "────────── = 4⋅w₀ + 2⋅w₁ + 4⋅w₂ = 0\n",
-       "{\\delta}w₂                         "
+       "{\\delta}E                          \n────────── = 4⋅w₀ + 2⋅w₁ + 4⋅w₂ = 0\n{\\delta}w₂                         "
       ]
      },
-     "execution_count": 56,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -227,21 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$D(x) = 2 x_{0} - 1$$"
+       "$$D(x) = 2 x_{0} + 5 x_{1} - 1$$"
       ],
       "text/plain": [
-       "D(x) = 2⋅x₀ - 1"
+       "D(x) = 2⋅x₀ + 5⋅x₁ - 1"
       ]
      },
-     "execution_count": 59,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -259,32 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Discriminator Equation: \n"
-     ]
-    },
-    {
      "data": {
       "text/latex": [
-       "$$x_{0} = \\frac{1}{2}$$"
+       "$$x_{0} = - \\frac{5 x_{1}}{2} + \\frac{1}{2}$$"
       ],
       "text/plain": [
-       "x₀ = 1/2"
+       "       5⋅x₁   1\nx₀ = - ──── + ─\n        2     2"
       ]
      },
-     "execution_count": 60,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(\"Discriminator Equation: \")\n",
     "Eq(x0, tuple(solveset(discriminator, x0))[0])"
    ]
   },
