--- a/assignments/ass5.ipynb
+++ b/assignments/ass5.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$D(x) = 2 x_{0} + 5 x_{1} - 1$$"
+       "$$D(x) = 2 x_{0} - 1$$"
       ],
       "text/plain": [
-       "D(x) = 2⋅x₀ + 5⋅x₁ - 1"
+       "D(x) = 2⋅x₀ - 1"
       ]
      },
      "metadata": {},
@@ -232,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$x_{0} = - \\frac{5 x_{1}}{2} + \\frac{1}{2}$$"
+       "$$x_{0} = \\frac{1}{2}$$"
       ],
       "text/plain": [
-       "       5⋅x₁   1\nx₀ = - ──── + ─\n        2     2"
+       "x₀ = 1/2"
       ]
      },
      "metadata": {},
