--- a/assignments/ass5.ipynb
+++ b/assignments/ass5.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Minimus Squared Error"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,27 +29,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = [\n",
-    "    (0, 0),\n",
-    "    (0, 1),\n",
-    "    (1, 0),\n",
-    "    (1, 1),\n",
+    "    (0, 0, 0),\n",
+    "    (2, 1, 1),\n",
+    "    (2, -1, 1),\n",
+    "    (1, 2, -1),\n",
+    "    (3, 2, 2),\n",
+    "    (2, 3, -3),\n",
+    "    (3, -3, 2),\n",
     "]\n",
-    "Y = [-1, -1, 1, 1]\n",
-    "N, M = 4, 2"
+    "Y = [1, 1, 1, -1, -1, -1, -1]\n",
+    "N, M = 7, 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w0, w1, w2 = symbols('w0 w1 w2')"
+    "w0, w1, w2, w3 = symbols('w0 w1 w2, w3')"
    ]
   },
   {
@@ -54,32 +64,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "expr = Add()\n",
     "for i in range(N):\n",
     "    x, y = X[i], Y[i]\n",
-    "    expr = expr + (w0 + w1 * x[0] + w2 * x[1] - y) ** 2 "
+    "    expr = expr + (w0 + w1 * x[0] + w2 * x[1] + w3 * x[2] - y) ** 2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$E(x) = \\sum_{i=1}^{N} \\left(D(x_{i}) - d_{i}\\right)^{2} = \\left(w_{0} + 1\\right)^{2} + \\left(w_{0} + w_{1} - 1\\right)^{2} + \\left(w_{0} + w_{2} + 1\\right)^{2} + \\left(w_{0} + w_{1} + w_{2} - 1\\right)^{2}$$"
+       "$$E(x) = \\sum_{i=1}^{N} \\left(D(x_{i}) - d_{i}\\right)^{2} = \\left(w_{0} - 1\\right)^{2} + \\left(w_{0} + w_{1} + 2 w_{2} - w_{3} + 1\\right)^{2} + \\left(w_{0} + 2 w_{1} - w_{2} + w_{3} - 1\\right)^{2} + \\left(w_{0} + 2 w_{1} + w_{2} + w_{3} - 1\\right)^{2} + \\left(w_{0} + 2 w_{1} + 3 w_{2} - 3 w_{3} + 1\\right)^{2} + \\left(w_{0} + 3 w_{1} - 3 w_{2} + 2 w_{3} + 1\\right)^{2} + \\left(w_{0} + 3 w_{1} + 2 w_{2} + 2 w_{3} + 1\\right)^{2}$$"
       ],
       "text/plain": [
-       "         N                                                                    \n        ___                                                                   \n        ╲                                                                     \n         ╲                  2           2                2                2   \nE(x) =   ╱   (D(x_{i}) - dᵢ)  = (w₀ + 1)  + (w₀ + w₁ - 1)  + (w₀ + w₂ + 1)  + \n        ╱                                                                     \n        ‾‾‾                                                                   \n       i = 1                                                                  \n\n                   \n                   \n                   \n                  2\n(w₀ + w₁ + w₂ - 1) \n                   \n                   \n                   "
+       "         N                                                                    \n",
+       "        ___                                                                   \n",
+       "        ╲                                                                     \n",
+       "         ╲                  2           2                            2        \n",
+       "E(x) =   ╱   (D(x_{i}) - dᵢ)  = (w₀ - 1)  + (w₀ + w₁ + 2⋅w₂ - w₃ + 1)  + (w₀ +\n",
+       "        ╱                                                                     \n",
+       "        ‾‾‾                                                                   \n",
+       "       i = 1                                                                  \n",
+       "\n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                    2                            2                            \n",
+       " 2⋅w₁ - w₂ + w₃ - 1)  + (w₀ + 2⋅w₁ + w₂ + w₃ - 1)  + (w₀ + 2⋅w₁ + 3⋅w₂ - 3⋅w₃ \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "\n",
+       "                                                                       \n",
+       "                                                                       \n",
+       "                                                                       \n",
+       "    2                                2                                2\n",
+       "+ 1)  + (w₀ + 3⋅w₁ - 3⋅w₂ + 2⋅w₃ + 1)  + (w₀ + 3⋅w₁ + 2⋅w₂ + 2⋅w₃ + 1) \n",
+       "                                                                       \n",
+       "                                                                       \n",
+       "                                                                       "
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -98,31 +134,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "dw0 = diff(expr, w0)\n",
     "dw1 = diff(expr, w1)\n",
-    "dw2 = diff(expr, w2)"
+    "dw2 = diff(expr, w2)\n",
+    "dw3 = diff(expr, w3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$\\frac{{\\delta}E}{{\\delta}w_0} = 8 w_{0} + 4 w_{1} + 4 w_{2} = 0$$"
+       "$$\\frac{{\\delta}E}{{\\delta}w_0} = 14 w_{0} + 26 w_{1} + 8 w_{2} + 4 w_{3} + 2 = 0$$"
       ],
       "text/plain": [
-       "{\\delta}E                          \n────────── = 8⋅w₀ + 4⋅w₁ + 4⋅w₂ = 0\n{\\delta}w₀                         "
+       "{\\delta}E                                       \n",
+       "────────── = 14⋅w₀ + 26⋅w₁ + 8⋅w₂ + 4⋅w₃ + 2 = 0\n",
+       "{\\delta}w₀                                      "
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -132,20 +172,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$\\frac{{\\delta}E}{{\\delta}w_1} = 4 w_{0} + 4 w_{1} + 2 w_{2} - 4 = 0$$"
+       "$$\\frac{{\\delta}E}{{\\delta}w_1} = 26 w_{0} + 62 w_{1} + 10 w_{2} + 18 w_{3} + 10 = 0$$"
       ],
       "text/plain": [
-       "{\\delta}E                              \n────────── = 4⋅w₀ + 4⋅w₁ + 2⋅w₂ - 4 = 0\n{\\delta}w₁                             "
+       "{\\delta}E                                          \n",
+       "────────── = 26⋅w₀ + 62⋅w₁ + 10⋅w₂ + 18⋅w₃ + 10 = 0\n",
+       "{\\delta}w₁                                         "
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -154,24 +197,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$\\frac{{\\delta}E}{{\\delta}w_2} = 4 w_{0} + 2 w_{1} + 4 w_{2} = 0$$"
+       "$$\\frac{{\\delta}E}{{\\delta}w_2} = 8 w_{0} + 10 w_{1} + 56 w_{2} - 26 w_{3} + 8 = 0$$"
       ],
       "text/plain": [
-       "{\\delta}E                          \n────────── = 4⋅w₀ + 2⋅w₁ + 4⋅w₂ = 0\n{\\delta}w₂                         "
+       "{\\delta}E                                        \n",
+       "────────── = 8⋅w₀ + 10⋅w₁ + 56⋅w₂ - 26⋅w₃ + 8 = 0\n",
+       "{\\delta}w₂                                       "
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "Eq(Eq(del_E / symbols(\"{\\delta}w_2\"), dw2), evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\\frac{{\\delta}E}{{\\delta}w_3} = 4 w_{0} + 18 w_{1} - 26 w_{2} + 40 w_{3} - 4 = 0$$"
+      ],
+      "text/plain": [
+       "{\\delta}E                                        \n",
+       "────────── = 4⋅w₀ + 18⋅w₁ - 26⋅w₂ + 40⋅w₃ - 4 = 0\n",
+       "{\\delta}w₃                                       "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Eq(Eq(del_E / symbols(\"{\\delta}w_3\"), dw3), evaluate=False)"
    ]
   },
   {
@@ -183,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sol = linsolve([dw0, dw1, dw2], (w0, w1, w2))"
+    "sol = linsolve([dw0, dw1, dw2, dw3], (w0, w1, w2, w3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,25 +272,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$D(x) = 2 x_{0} - 1$$"
+       "$$D(x) = - \\frac{3777 x_{0}}{5545} - \\frac{287 x_{1}}{5545} + \\frac{1471 x_{2}}{5545} + \\frac{5966}{5545}$$"
       ],
       "text/plain": [
-       "D(x) = 2⋅x₀ - 1"
+       "         3777⋅x₀   287⋅x₁   1471⋅x₂   5966\n",
+       "D(x) = - ─────── - ────── + ─────── + ────\n",
+       "           5545     5545      5545    5545"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "x0, x1, x2 = symbols(\"x0 x1 x2\")\n",
-    "discriminator = w[0] + w[1] * x0 + w[2] * x1\n",
+    "discriminator = w[0] + w[1] * x0 + w[2] * x1 + w[3] * x2\n",
     "Eq(symbols(\"D(x)\"), discriminator)"
    ]
   },
@@ -232,20 +306,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$x_{0} = \\frac{1}{2}$$"
+       "$$x_{0} = - \\frac{287 x_{1}}{3777} + \\frac{1471 x_{2}}{3777} + \\frac{5966}{3777}$$"
       ],
       "text/plain": [
-       "x₀ = 1/2"
+       "       287⋅x₁   1471⋅x₂   5966\n",
+       "x₀ = - ────── + ─────── + ────\n",
+       "        3777      3777    3777"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
