--- a/assignments/non-parametric-decision-making/minimum-squared-error-discriminant-function.ipynb
+++ b/assignments/non-parametric-decision-making/minimum-squared-error-discriminant-function.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Minimus Squared Error"
+    "# Minimus Squared Error Discriminant Function"
    ]
   },
   {
