--- a/assignments/neural-network/iris.ipynb
+++ b/assignments/neural-network/iris.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer_1_size = 200\n",
-    "layer_2_size = 100"
+    "layer_1_size = 50\n",
+    "layer_2_size = 10"
    ]
   },
   {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "(4, 3)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,8 +370,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trainer function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,15 +402,19 @@
     "            print(\"Final Test Accuracy:\", final_test_acc)\n",
     "            print(\"--------------------------------------\")\n",
     "        \n",
-    "        train_writer.close()\n",
-    "        test_writer.close()\n",
-    "        \n",
     "        return final_train_acc, final_test_acc"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pre-processor function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,77 +438,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy: 0.9851852\nTest accuracy: 1.0\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9851852\nTest accuracy: 0.8\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 1.0\nTest accuracy: 0.8\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9777778\nTest accuracy: 1.0\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9851852\nTest accuracy: 0.93333334\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9851852\nTest accuracy: 0.93333334\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9851852\nTest accuracy: 1.0\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9851852\nTest accuracy: 0.8666667\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9777778\nTest accuracy: 1.0\n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9851852\nTest accuracy: 1.0\n\n\nFinal train accuracy: 0.9851851999759674\nFinal test accuracy: 0.9333333373069763\n"
+      "Train accuracy: 0.9851852\n",
+      "Test accuracy: 1.0\n",
+      "\n",
+      "Train accuracy: 0.9851852\n",
+      "Test accuracy: 0.8\n",
+      "\n",
+      "Train accuracy: 1.0\n",
+      "Test accuracy: 0.8\n",
+      "\n",
+      "Train accuracy: 0.9777778\n",
+      "Test accuracy: 1.0\n",
+      "\n",
+      "Train accuracy: 0.9851852\n",
+      "Test accuracy: 0.93333334\n",
+      "\n",
+      "Train accuracy: 0.9851852\n",
+      "Test accuracy: 0.93333334\n",
+      "\n",
+      "Train accuracy: 0.9851852\n",
+      "Test accuracy: 1.0\n",
+      "\n",
+      "Train accuracy: 0.9851852\n",
+      "Test accuracy: 0.8666667\n",
+      "\n",
+      "Train accuracy: 0.9777778\n",
+      "Test accuracy: 1.0\n",
+      "\n",
+      "Train accuracy: 0.9851852\n",
+      "Test accuracy: 1.0\n",
+      "\n",
+      "\n",
+      "Final train accuracy: 0.9851851999759674\n",
+      "Final test accuracy: 0.9333333373069763\n"
      ]
     }
    ],
@@ -523,6 +503,9 @@
     "train_accuracy /= 10\n",
     "test_accuracy /= 10\n",
     "\n",
+    "train_writer.close()\n",
+    "test_writer.close()\n",
+    "\n",
     "print(\"\")\n",
     "print(\"Final train accuracy:\", train_accuracy)\n",
     "print(\"Final test accuracy:\", test_accuracy)"
@@ -538,23 +521,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
